# virtual-driving-lab

./: .clang-format  .clang-tidy  .clangd  .cmake-format  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  add-kitware-apt-repo.sh  add-llvm-apt-repo.sh  devcontainer.json  reinstall-cmake.sh  reinstall-llvm.sh  reinstall-ninja.sh
.github/workflows/: ci.yml
docs/: CMakeLists.txt  header.html
include/VirtualDrivingLab/: Concepts.hpp  EntityFunctions.hpp  EntityRepository.hpp  Error.hpp  FiniteStateMachine.hpp  Flags.hpp  IIdentifiable.hpp  IStepable.hpp  Types.hpp
include/VirtualDrivingLab/Communication/: Channel.hpp  Publisher.hpp  Subscriber.hpp
src/: CMakeLists.txt  FiniteStateMachine.cpp  MainTest.cpp  ModulesExample.cpp
src/Communication/: CMakeLists.txt  Channel.cpp  Publisher.cpp  Subscriber.cpp
tests/: .clang-tidy  CMakeLists.txt  ChannelTest.cpp  EntityFunctionsTest.cpp  EntityRepositoryBench.cpp  EntityRepositoryTest.cpp  FiniteStateMachineTest.cpp  FlagsTest.cpp  IIdentifiableTest.cpp  IStepableTest.cpp  PublisherTest.cpp  SubscriberTest.cpp  TypesTest.cpp
